add multi-objective fitness function for gym optimization

--- a/model/playground.ipynb
+++ b/model/playground.ipynb
@@ -10,18 +10,19 @@
     "import gym_model\n",
     "importlib.reload(gym_model)\n",
     "from visualisation import JupyterVizGym, GymDrawer\n",
-    "from optimization import LayoutTemplate"
+    "from optimization import LayoutTemplate\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f407e00777ee42f089b2772075298d97",
+       "model_id": "83c52441c6db4ae58b461c8a9b5d8f4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,9 +38,6 @@
     }
    ],
    "source": [
-    "template = LayoutTemplate.circular(height=20, width=6)\n",
-    "import random\n",
-    "\n",
     "model_params = {\n",
     "    \"interarrival_time\": {\n",
     "        \"type\": \"SliderInt\",\n",
@@ -49,22 +47,37 @@
     "        \"max\": 50,\n",
     "        \"step\": 1,\n",
     "    },\n",
-    "    \"machine_density\": {\n",
+    "    \"agent_exercise_duration\": {\n",
+    "        \"type\": \"SliderInt\",\n",
+    "        \"value\": 10,\n",
+    "        \"label\": \"mean exercise duration:\",\n",
+    "        \"min\": 1,\n",
+    "        \"max\": 50,\n",
+    "        \"step\": 1,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "RANDOM_LAYOUT = True\n",
+    "\n",
+    "if RANDOM_LAYOUT:\n",
+    "    model_params[\"machine_density\"] ={\n",
     "        \"type\": \"SliderFloat\",\n",
     "        \"value\": 0.25,\n",
     "        \"label\": \"Density of gym equipment:\",\n",
     "        \"min\": 0.05,\n",
     "        \"max\": 1,\n",
     "        \"step\": 0.05,\n",
-    "    },\n",
-    "    # \"layout\": template.instantiate([random.choice(list(gym_model.Equipment)) for _ in range(len(template))]),\n",
-    "    # \"spawn_location\": template.entrance,\n",
-    "}\n",
+    "    }\n",
+    "else:\n",
+    "    template = LayoutTemplate.circular(height=20, width=6)\n",
+    "    model_params[\"layout\"] = template.instantiate([random.choice(list(gym_model.Equipment)) for _ in range(len(template))])\n",
+    "    model_params[\"spawn_location\"] = template.entrance\n",
+    "\n",
     "\n",
     "page = JupyterVizGym(\n",
     "    gym_model.Gym,\n",
     "    model_params,\n",
-    "    measures=[\"Searching\"],\n",
+    "    measures=[\"Utilization\", \"Congestion\"],\n",
     "    name=\"Test gym\",\n",
     "    agent_portrayal=lambda agent: agent.portrayal,\n",
     "    # space_drawer=\"default\",\n",
@@ -72,6 +85,142 @@
     ")\n",
     "\n",
     "page"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Utilization</th>\n",
+       "      <th>Congestion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Utilization  Congestion\n",
+       "0     0.000000           1\n",
+       "1     1.000000           1\n",
+       "2     1.000000           1\n",
+       "3     1.000000           1\n",
+       "4     0.500000           1\n",
+       "5     1.000000           1\n",
+       "6     1.000000           1\n",
+       "7     1.000000           1\n",
+       "8     1.000000           1\n",
+       "9     0.666667           1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gym = gym_model.Gym(interarrival_time=5)\n",
+    "\n",
+    "for _ in range(10):\n",
+    "    gym.step()\n",
+    "\n",
+    "df = gym.datacollector.get_model_vars_dataframe()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Utilization    0.816667\n",
+       "Congestion     1.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.mean()"
    ]
   }
  ],
