usable cost functions

--- a/model/playground.ipynb
+++ b/model/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,13 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b46b0c19a4b3411cb651d332e69e20ab",
+       "model_id": "4111fb31a80d4b2c802d3710d64939ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -111,7 +111,7 @@
     "model_params = {\n",
     "    \"interarrival_time\": {\n",
     "        \"type\": \"SliderInt\",\n",
-    "        \"value\": 5,\n",
+    "        \"value\": 2,\n",
     "        \"label\": \"time between arrivals:\",\n",
     "        \"min\": 1,\n",
     "        \"max\": 50,\n",
@@ -119,7 +119,7 @@
     "    },\n",
     "    \"agent_exercise_duration\": {\n",
     "        \"type\": \"SliderInt\",\n",
-    "        \"value\": 30,\n",
+    "        \"value\": 20,\n",
     "        \"label\": \"mean exercise duration:\",\n",
     "        \"min\": 1,\n",
     "        \"max\": 3 * 60,\n",
@@ -139,7 +139,7 @@
     "        \"step\": 0.05,\n",
     "    }\n",
     "else:\n",
-    "    template = LayoutTemplate.square_isles(isle_rows=1, isle_cols=2)\n",
+    "    template = LayoutTemplate.square_isles(isle_rows=2, isle_cols=2)\n",
     "    model_params[\"layout\"] = template.instantiate([random.choice(list(gym_model.Equipment)) for _ in range(len(template))])\n",
     "    model_params[\"spawn_location\"] = template.entrance\n",
     "\n",
@@ -147,7 +147,7 @@
     "page = JupyterVizGym(\n",
     "    gym_model.Gym,\n",
     "    model_params,\n",
-    "    measures=[\"Congestion\", \"Efficiency\", \"Utilization\"],\n",
+    "    measures=[\"Congestion\", \"Utilization\"],\n",
     "    name=\"Test gym\",\n",
     "    agent_portrayal=lambda agent: agent.portrayal,\n",
     "    # space_drawer=\"default\",\n",
@@ -159,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulating gym: 100%|██████████| 1000/1000 [00:01<00:00, 901.50it/s, 123 agents]\n"
+      "Simulating gym: 100%|██████████| 20/20 [00:00<00:00, 647.96it/s, 11 agents]\n"
      ]
     },
     {
@@ -190,120 +190,262 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Utilization</th>\n",
-       "      <th>Congestion</th>\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Step</th>\n",
+       "      <th>AgentID</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
+       "      <th>0</th>\n",
+       "      <td>SEARCHING</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1</th>\n",
+       "      <th>0</th>\n",
+       "      <td>SEARCHING</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1</td>\n",
+       "      <td>SEARCHING</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1</td>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2</th>\n",
+       "      <th>0</th>\n",
+       "      <td>SEARCHING</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
+       "      <td>WORKING_OUT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>0.983871</td>\n",
-       "      <td>31</td>\n",
+       "      <th rowspan=\"5\" valign=\"top\">19</th>\n",
+       "      <th>6</th>\n",
+       "      <td>SEARCHING</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>0.975806</td>\n",
-       "      <td>31</td>\n",
+       "      <th>7</th>\n",
+       "      <td>WORKING_OUT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>0.983740</td>\n",
-       "      <td>31</td>\n",
+       "      <th>8</th>\n",
+       "      <td>SEARCHING</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>0.975410</td>\n",
-       "      <td>31</td>\n",
+       "      <th>9</th>\n",
+       "      <td>WORKING_OUT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>0.975610</td>\n",
-       "      <td>31</td>\n",
+       "      <th>10</th>\n",
+       "      <td>SEARCHING</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 2 columns</p>\n",
+       "<p>120 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Utilization  Congestion\n",
-       "0       0.000000           1\n",
-       "1       1.000000           1\n",
-       "2       1.000000           1\n",
-       "3       1.000000           1\n",
-       "4       0.500000           1\n",
-       "..           ...         ...\n",
-       "995     0.983871          31\n",
-       "996     0.975806          31\n",
-       "997     0.983740          31\n",
-       "998     0.975410          31\n",
-       "999     0.975610          31\n",
+       "                    State\n",
+       "Step AgentID             \n",
+       "0    0          SEARCHING\n",
+       "1    0          SEARCHING\n",
+       "     1          SEARCHING\n",
+       "2    0          SEARCHING\n",
+       "     1        WORKING_OUT\n",
+       "...                   ...\n",
+       "19   6          SEARCHING\n",
+       "     7        WORKING_OUT\n",
+       "     8          SEARCHING\n",
+       "     9        WORKING_OUT\n",
+       "     10         SEARCHING\n",
        "\n",
-       "[1000 rows x 2 columns]"
+       "[120 rows x 1 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gym = gym_model.Gym(interarrival_time=5)\n",
+    "gym = gym_model.Gym(interarrival_time=2, agent_exercise_duration=3)\n",
     "\n",
-    "df = gym.run(1000, progress_bar=True)\n",
-    "df"
+    "model_df, agent_df = gym.run(20, progress_bar=True)\n",
+    "agent_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Utilization    0.816667\n",
-       "Congestion     1.000000\n",
-       "dtype: float64"
+       "AgentID\n",
+       "0     20\n",
+       "1     19\n",
+       "2     17\n",
+       "3     15\n",
+       "4     13\n",
+       "5     11\n",
+       "6      9\n",
+       "7      7\n",
+       "8      5\n",
+       "9      3\n",
+       "10     1\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.mean()"
+    "agent_total_time = agent_df.groupby(\"AgentID\").size()\n",
+    "agent_total_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AgentID  State      \n",
+       "0        SEARCHING      3\n",
+       "         WORKING_OUT    7\n",
+       "1        SEARCHING      7\n",
+       "         WORKING_OUT    3\n",
+       "2        SEARCHING      3\n",
+       "         WORKING_OUT    6\n",
+       "3        SEARCHING      2\n",
+       "         WORKING_OUT    6\n",
+       "4        SEARCHING      4\n",
+       "         WORKING_OUT    3\n",
+       "5        SEARCHING      2\n",
+       "         WORKING_OUT    4\n",
+       "6        SEARCHING      2\n",
+       "         WORKING_OUT    3\n",
+       "7        SEARCHING      1\n",
+       "         WORKING_OUT    3\n",
+       "8        SEARCHING      1\n",
+       "         WORKING_OUT    2\n",
+       "9        SEARCHING      1\n",
+       "         WORKING_OUT    1\n",
+       "10       SEARCHING      1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent_state_counter = agent_df.groupby(['AgentID', 'State']).size()#.reset_index(name='Count')\n",
+    "agent_state_counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AgentID\n",
+       "0    12\n",
+       "1     9\n",
+       "2     8\n",
+       "3     8\n",
+       "4     9\n",
+       "5     6\n",
+       "6     6\n",
+       "7     5\n",
+       "8     3\n",
+       "9     2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "steps_working_out = agent_df[agent_df['State'] == 'WORKING_OUT'].groupby('AgentID').size()\n",
+    "steps_working_out\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AgentID\n",
+       "0     0.600000\n",
+       "1     0.473684\n",
+       "2     0.470588\n",
+       "3     0.533333\n",
+       "4     0.692308\n",
+       "5     0.545455\n",
+       "6     0.666667\n",
+       "7     0.714286\n",
+       "8     0.600000\n",
+       "9     0.666667\n",
+       "10    0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Compute the efficiency ratio for each AgentID\n",
+    "efficiency_ratio = steps_working_out / agent_total_time\n",
+    "efficiency_ratio.fillna(0, inplace=True) # some of them don't even lift (bruh)\n",
+    "efficiency_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.137483761760341"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "efficiency_ratio.mean()"
    ]
   }
  ],
